# p2p_chat

./: .gitignore  DerekhChat.sln  P2P_Chat.sln  README.md
DerekhChat/: DerekhChat.vcxproj  DerekhChat.vcxproj.filters  chat_client.cpp  chat_client.h  handlers.cpp  main.cpp  message_builder.cpp  message_builder.h  message_formats.h  utils.h
P2P_Chat/: CMakeLists.txt  ChatClient.cpp  ChatClient.h  Handlers.h  Logger.cpp  Logger.h  Makefile  MessageBuilder.cpp  MessageBuilder.h  P2P_Chat.vcxproj  P2P_Chat.vcxproj.filters  Peer.cpp  Peer.h  chat_client.cpp  chat_client.h  handlers.cpp  main.cpp  message_builder.cpp  message_builder.h  message_formats.h  utils.cpp  utils.h
P2P_Chat/src/: ChatClient.cpp  ChatClient.h  MessageBuilder.cpp  MessageBuilder.h  handlers.cpp  main.cpp  message_formats.h  utils.h
